--- a/Writeup/Thesis.tex
+++ b/Writeup/Thesis.tex
@@ -31,15 +31,15 @@
 
 
 
-\SetTitle{\huge{Simulating Optical Pumping\\in the Laser Spectroscopy \\Experiment at TRIUMF}}%
-\SetAuthor{Julien Refour}%
+\SetTitle{\huge{Simulating Optical Pumping\\in the Collinear Laser Spectroscopy \\Experiment at TRIUMF}}%
+\SetAuthor{Julien Refour Tannenbaum}%
 \SetDegreeType{Masters of Science}%
 \SetDepartment{Department of Physics}%
 \SetUniversity{McGill University}%
 \SetUniversityAddr{Montreal, Quebec}%
 \SetThesisDate{2017-12-14}%
-\SetRequirements{Requirements Statement}%
-\SetCopyright{Copyright Statement}%
+\SetRequirements{A thesis submitted in partial fulfillment of the requirements for the degree of Masters of Science.}%
+\SetCopyright{\textcopyright \ Julien Refour Tannenbaum}%
 
 
 
@@ -84,14 +84,14 @@
 %%         English Abstract                        %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractEnName{\MakeUppercase{Abstract}}%
-\SetAbstractEnText{Laser spectroscopy is a technique that can be used to probe the electronic structure of atoms/ions. The Collinear Fast Beam Spectroscopy (CFBS) group at TRIUMF uses this technique to probe the hyperfine structure of rare isotopes produced on-site. The hyperfine structure of an atom, which arises from the various interactions between the atom's/ion's electrons and nucleus, can be used to infer properties, such as the spin and mean squared charge radius, of the atom's nucleus. However, the geometry of the experimental set up at TRIUMF allows for the possibility of optical pumping, a process by which the atoms/ions being probed have their electronic ground state distribution changed before the hyperfine structure can be measured. This in turn can change the relative intensities of the hyperfine transitions being measured. Optical pumping depends, mainly, on the power of the laser used to excite the hyperfine transitions being studied. In this work, a statistical model designed to simulate the effects of optical pumping on hyperfine spectra measured at TRIUMFs CFBS experiment. With the goal of simulating the hyperfine spectrum of any atom under investigation, the model is based on the likelihood that an atom/ion reaches the region where the hyperfine spectrum is measured in its original ground state. This likelihood is in turn used the modify the relative intensities of each hyperfine transition. The effects of laser power, the temperature of the atoms/ions, and the distance they must travel before being measured are examined. Additionally, the predictions of the model are compared to previously measured Gallium-69 and Rubidium-87 hyperfine spectra. Discrepancies between the assumed temperature and the temperature predicted by the model were observed in the case of Gallium-69, with a possible resolution being the effects of accelerating the atoms/ions when they are extracted from a Radio Frequency Quadrupole trap used for bunching. In the case of Rubidium-87, a discrepancy between the expected and measured relative intensity of particular transition is observed. This may be due to an over-estimation of the power delivered to the atoms.}
+\SetAbstractEnText{Laser spectroscopy is a technique that can be used to probe the electronic structure of atoms/ions. The Collinear Fast Beam Spectroscopy (CFBS) group at TRIUMF uses this technique to probe the hyperfine structure of rare isotopes produced on-site. The hyperfine structure of an atom, which arises from the various interactions between the atom's/ion's electrons and nucleus, can be used to infer properties, such as the spin and mean squared charge radius, of the atom's nucleus. However, the geometry of the experimental set up at TRIUMF allows for the possibility of optical pumping, a process by which the atoms/ions being probed have their electronic ground state distribution changed before the hyperfine structure can be measured. This in turn can change the relative intensities of the hyperfine transitions being measured. Optical pumping depends, mainly, on the power of the laser used to excite the hyperfine transitions being studied. In this work, a statistical model is developed to simulate the effects of optical pumping on hyperfine spectra measured at TRIUMF's CFBS experiment. With the goal of simulating the hyperfine spectrum of any atom under investigation, the model is based on the likelihood that an atom/ion reaches the region where the hyperfine spectrum is measured, in its original ground state. This likelihood is in turn used to modify the relative intensities of each hyperfine transition. The effects of laser power, the temperature of the atoms/ions, and the distance they must travel before being measured are examined. Additionally, the predictions of the model are compared to previously measured Gallium-69 and Rubidium-87 hyperfine spectra. Discrepancies between the assumed temperature and the temperature predicted by the model were observed in the case of Gallium-69, with a possible resolution being the effects of accelerating the atoms/ions when they are extracted from a Radio Frequency Quadrupole trap used for bunching. In the case of Rubidium-87, a discrepancy between the expected and measured relative intensity of particular transition is observed. This may be due to an over-estimation of the power delivered to the atoms.}
 \AbstractEn%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%         French Abstract                         %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \SetAbstractFrName{\MakeUppercase{ABR\'{E}G\'{E}}}%
-\SetAbstractFrText{Un model statistique, construit pour la simulation des effets du pompage optique sur les spectres hyperfines mesurés à TRIUMF, est présenté. Les résultats de ce model, construit sur la probabilité qu’une atome arrive dans la région d’interaction dans son état de repos original, sont comparés avec des spectres mesurés du Gallium-69 et Rubidium-87. Dans le cas du Gallium-69, une différence entre la température assumée et la température calculée a été observée, provenant peut-être des effets des voltages appliqués aux atomes lors de leur extraction et accélération. Pour le Rubidium-87, une différence entre les intensités mesurée et calculés de la transition $F_e = 1 \rightarrow F_g = 2$ a été observée, les origines de laquelle viennent d’une surestimation de l’intensité du laser.}%
+\SetAbstractFrText{La spectroscopie laser est une technique qui permet l’étude de la structure electronique des atomes et ions. Le group Collinear Fast Beam Spectroscopy (CFBS), situé à TRIUMF, applique cette technique avec le but d’étudier les spectres hyperfines des atomes et ions rares, produit sur place. La structure hyperfine d’un atome, résultant des interactions entre les électrons de valence et le noyau de l’atome ou ion, peut être utilisée pour déterminer le spin quantique et la valeur quadratique moyenne du rayon des charges, entre autres, de l’atome ou ion. À TRIUMF, la géometrie de l’expérience admet l'occurence du pompage optique, un effet qui peut amener un changement aux états de repos des particules étudiées. Ce changement peut, à son tour, altérer les intensités relatives des transitions hyperfines mesurées. Le pompage optique dépend, en majeur partie, de l’intensité utilisée pour l’excitation des transitions hyperfines. Ce travaille présente un modèle statistique construit pour la simulation des effets du pompage optique sur les spectres hyperfines mesurés à TRIUMF. Ce modèle est construit sur la probabilité qu’un atome ou ion arrive à la région d’interaction dans son état de repos originale. Cette probabilité est ensuite appliquée comme modification aux intensités relatives des transitions hyperfines. Les effets de l’intensité du laser, la température des particules et la distance qu’elles doivent traverser avant d’être mesurées sont investigués. De plus, les résultats obtenus du modèle sont comparés aux spectres hyperfines, mesurés auparavant, du Gallium-69 et du Rubidium-87. Dans le cas du Gallium-69, une différence entre la température assumée et celle calculée par le model a été observée. Cette différence provient peut-être des méthodes utilisées pour l’extraction et l’accélération des particules étudiées. Pour ce qui est du Rubidium-87, une différence entre les intensités mesurées et calculées a été observée. Une surestimation de l’intensité effective du laser pourrait \^etre à l'origine de ces écarts.}%
 \AbstractFr%
 
 \TOCHeading{\MakeUppercase{Table of Contents}}%
