--- a/Writeup/julienreferences.bib
+++ b/Writeup/julienreferences.bib
@@ -70,7 +70,7 @@ note = {Unpublished}
 }
 
 @article{GA69,
-  title = {Nuclear mean-square charge radii of ${}^{63,64,66,68-82}$Ga nuclei: No anomalous behavior at $N=32$},
+  title = {Nuclear mean-square charge radii of ${}^{63,64,66,68-82}${G}a nuclei: No anomalous behavior at $N=32$},
   author = {T. Procter et al.},
   journal = {Phys. Rev. C},
   volume = {86},
