--- a/Writeup/intro_include/intro.tex
+++ b/Writeup/intro_include/intro.tex
@@ -1,4 +1,4 @@
-\noindent First observed in 1892 \citep{michelson}, the splitting of the spectral line of a single atomic transition, now known as the hyperfine splitting or structure of a transition, was theoretically described in 1924 by Wolfgang Pauli\citep{Pauli1924}. The development of quantum mechanics allowed Pauli to propose that the hyperfine splitting of a transition arose from the interaction of the orbital electrons and a small nuclear magnetic moment. In 1931, H. Schüler and T. Schmidt proposed the additional contribution of a nuclear electric quadrupole moment to the hyperfine splitting, completing the modern understanding of the interaction mechanisms\citep{Lieb2001}.
+\noindent First observed in 1892\citep{michelson}, the splitting of the spectral line of a single atomic transition, now known as the hyperfine splitting or structure of a transition, was theoretically described in 1924 by Wolfgang Pauli\citep{Pauli1924}. The development of quantum mechanics allowed Pauli to propose that the hyperfine splitting of a transition arose from the interaction of the orbital electrons and a small nuclear magnetic moment. In 1931, H. Schüler and T. Schmidt proposed the additional contribution of a nuclear electric quadrupole moment to the hyperfine splitting, completing the modern understanding of the interaction mechanisms\citep{Lieb2001}.
 
 The existence of hyperfine structure offers the unique opportunity to study the structure of the nucleus of an atom by probing the structure of a particular electronic transition. The nuclear magnetic moment proposed by Pauli depends on the spin of the nucleus, while the electric quadrupole moment described by Schüler and Schmidt depends on the distribution of charge in the nucleus. If the nuclear spin and the angular momentum state of the electron in both the ground and excited states are known, then the expected hyperfine structure can be determined by up to four parameters. Known as the hyperfine coefficients, these parameters describe the strength of the electron-nucleus interactions that give rise to the hyperfine structure. If the hyperfine spectrum of a transition can be measured empirically, the hyperfine coefficients and, by consequence, the nuclear structure can be determined. 
 
@@ -6,4 +6,4 @@ Laser spectroscopy is a technique through which the hyperfine spectrum of a tran
 
 As with all experimental techniques, laser spectroscopy has its drawbacks. Among others, an effect known as optical pumping can severely change the outcome of a measurement. Optical pumping occurs when the atoms are exposed to the laser for a significant time before passing through the light collection region. This prolonged exposure to the laser can change the ground state distribution of the atoms, which in turn can cause certain hyperfine peaks to be drowned out or emphasized, altering the results of the ensuing hyperfine coefficient calculations. The strength of optical pumping depends on the isotope being investigated, the power of the exciting laser as well as the overall geometry of the experimental set up.
 
-This work develops a procedure through which the effects of optical pumping on a given hyperfine spectrum can be simulated. In particular, this work focuses on the laser spectroscopy experiment set up at TRIUMF, Canada's national nuclear physics laboratory. The following Chapter briefly outlines TRIUMF's general structure, as well as how laser spectroscopy is done on site. Chapter 3 provides a theoretical background to the mechanisms that lead to hyperfine splitting, while chapter 4 describes and demonstrates the effects of optical pumping on a hyperfine spectrum. The methods used to simulate the effects of optical pumping at TRIUMF are also presented in this section, with the results presented in Chapter 5. A summary and some concluding remarks are given in Chapter 6, and, finally, the developed program is found in the appendix. 
+This work develops a procedure through which the effects of optical pumping on any hyperfine spectrum can be simulated. In particular, this work focuses on the laser spectroscopy experiment set up at TRIUMF, Canada's national nuclear physics laboratory. The following Chapter briefly outlines TRIUMF's general structure, as well as how laser spectroscopy is done on site. Chapter 3 provides a theoretical background to the mechanisms that lead to hyperfine splitting, while Chapter 4 describes and demonstrates the effects of optical pumping on a hyperfine spectrum. The methods used to simulate the effects of optical pumping at TRIUMF are also presented in this section, with the results presented in Chapter 5. A summary and some concluding remarks are given in Chapter 6, and, finally, the developed program is found in the Appendix. 
